--- a/profile-card/src/Components/FriendsList/FriendList.module.css
+++ b/profile-card/src/Components/FriendsList/FriendList.module.css
@@ -29,13 +29,11 @@
 }
 
 .online {
-  border-radius: 50%;
-  background: green;
+  border: 2px solid green;
 }
 
 .offline {
-  border-radius: 50%;
-  background: red;
+  border: 2px solid red;
 }
 
 .friend .name {
